[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2html"
version = "0.1.0"
description = """
    Markdown to HTML converter using pandoc (bundled via pypandoc-binary) with built-in styles.

    ```shell
    uvx 2html <input.md>
    ```
"""
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Henri J. Norden" }]
license = { text = "MIT" }
keywords = ["markdown", "html", "pandoc", "cli", "css", "styles"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
  "2to",
  "rich-argparse",
]

[tool.uv.sources]
2to = { workspace = true }

[project.scripts]
2html = "_2html.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["_2html*"]
