[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2pdf"
version = "0.1.0"
description = """
    Markdown to PDF converter using pandoc (bundled via pypandoc-binary) with built-in styles.

    ```shell
    uvx 2pdf <input.md>
    ```
"""
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Henri J. Norden" }]
license = { text = "MIT" }
keywords = ["markdown", "pdf", "pandoc", "cli", "css", "styles", "pypandoc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "2to",
    "xhtml2pdf",
    "rich-argparse",
]

[tool.uv.sources]
2to = { workspace = true }

[project.scripts]
2pdf = "_2pdf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["_2pdf*"]
